[gd_scene load_steps=2 format=3 uid="uid://placeholder_levelselect"]

[ext_resource type="Script" path="res://scenes/level_select/LevelSelectScene.gd" id="1"]

[node name="LevelSelectScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 110.0
grow_horizontal = 2
text = "Select Challenge - Wave 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="NormalPanel" type="Panel" parent="CardsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NormalContent" type="VBoxContainer" parent="CardsContainer/NormalPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NormalTitle" type="Label" parent="CardsContainer/NormalPanel/NormalContent"]
layout_mode = 2
text = "Normal Challenge"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="CardsContainer/NormalPanel/NormalContent"]
layout_mode = 2

[node name="NormalDesc" type="Label" parent="CardsContainer/NormalPanel/NormalContent"]
layout_mode = 2
size_flags_vertical = 3
text = "Normal enemies await."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="NormalButton" type="Button" parent="CardsContainer/NormalPanel/NormalContent"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Normal (+5 Gold)"

[node name="HardPanel" type="Panel" parent="CardsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HardContent" type="VBoxContainer" parent="CardsContainer/HardPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HardTitle" type="Label" parent="CardsContainer/HardPanel/HardContent"]
layout_mode = 2
text = "Hard Challenge"
horizontal_alignment = 1

[node name="Separator2" type="HSeparator" parent="CardsContainer/HardPanel/HardContent"]
layout_mode = 2

[node name="HardDesc" type="Label" parent="CardsContainer/HardPanel/HardContent"]
layout_mode = 2
size_flags_vertical = 3
text = "Stronger enemies, greater reward!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HardButton" type="Button" parent="CardsContainer/HardPanel/HardContent"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Hard (+15 Gold)"
